# nbody-caro

./: .gitignore  Body.cpp  Body.h  CMakeLists.txt  NBodySystem.cpp  NBodySystem.h  Point.cpp  Point.h  Simulator.cpp  Simulator.h  System.cpp  System.h  Trajectory.cpp  Trajectory.h  main.cpp  plot.py
..bfg-report/2018-06-30/23-31-47/: cache-stats.txt  deleted-files.txt  object-id-map.old-new.txt
..bfg-report/2018-06-30/23-31-47/protected-dirt/: 2baaa354-HEAD.csv
